# synapse-project

./: .gitignore  README.md  pyproject.toml
src/synapse/: agent.py
src/synapse_cli/: __main__.py  cli.py  main.py
src/synapse_core/: __init__.py  agent.py  context.py  mappers.py  memory.py  model.py  types.py
src/synapse_core/memoirs/: __init__.py  json_file_memory.py  memory.py  summarizing_json_file_memory.py
src/xm/: agent.py  context.py  mappers.py  memory.py  model.py  types.py
src/xm_cli/: __init__.py  cli.py  main.py
