[project]
name = "xm"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "xmarlon30x2", email = "xmarlon360x2@gmail.com" }
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.13"
dependencies = [
    "mcp",
    "openai",
]

[project.scripts]
xm-cli = "auto_code_cli:main"

[project.urls]
Homepage = "https://github.com/xmarlon30x2/xm"
Documentation = "https://github.com/xmarlon30x2/xm/docs"
Repository = "https://github.com/xmarlon30x2/xm"
Issues = "https://github.com/xmarlon30x2/xm/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # Line length handled by formatter
